- fixed: rendering components in `layout`
- fixed: resources, there was a bug with reading of value from `default.resource`
- fixed: too many open files in `res.image()`
- fixed: too many open files in `res.filefs()`
- fixed: Schema `Boolean` parser
- fixed: renamed `F.stats.request.path` to `F.stats.request.patch`
- fixed: SMTP sender (a problem with auth mechanism with some mail servers)

x renamed: `*.routeScript` to `*.public_js`
x renamed: `*.routeStyle` to `*.public_css`
x renamed: `*.routeFont` to `*.public_font`
x renamed: `*.routeVideo` to `*.public_video`
x renamed: `*.routeImage` to `*.public_image`
x renamed: `*.routeDownload` to `*.public_download`
x renamed: `*.routeStatic` to `*.public`
x renamed: `controller.viewCompile()` to `controller.view_compile()`

x __removed: backward compatibility__ with older version of Node.js < 10
x removed: `F.hash()`, alternative `String.prototype.hash()`
x removed: `controller.hash()`, alternative `String.prototype.hash()`

- improved Schemas and error handling
- improved `res.filefs()` method for nonexistent files

======= 3.2.0

- added: `WORKER()` alias to `F.worker()`
- added: `WORKER2()` alias to `F.worker2()`
- added: `F.cluster.https()`
- added: `TaskBuilder.done2([send_value])` returns `function` with wrapped `.done()`
- added: `TaskBuilder.success2([send_value])` returns `function` with wrapped `.success()`
- added: `TaskBuilder.next2(name)` returns `function` with wrapped `.next()`
- added: new `RESTBuilder` aliases `.DELETE()`, `.PUT()`, `.POST()`, `.PATCH() and `.GET()`
- added: `schema.before(key, (value, model, index) => value)` is a simple and new alternative to `schema.setPrepare()`
- added: `SchemaInstance.$parent` returns a parent schema (if the schema is nested schema)
- added: `SchemaOptions.redirect(url)` can perform a redirect from the schema
- added: `OperationOptions.redirect(url)` can perform a redirect from the operation
- added: `.ics` extension as acceptable file for the web server
