@@ -82,6 +82,7 @@ x updated: `U.parseXML(str, [replace])` and `String.parseXML([replace])` contain
 - fixed: Schema `Boolean` parser
 - fixed: renamed `F.stats.request.path` to `F.stats.request.patch`
 - fixed: SMTP sender (a problem with auth mechanism with some mail servers)
+- fixed: filter in `F.backup()`
 
 x renamed: `*.routeScript` to `*.public_js`
 x renamed: `*.routeStyle` to `*.public_css`
